// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`audioPlayer reducer should seek end 1`] = `
Object {
  "currentIndex": 0,
  "currentSongName": "",
  "currentSongUrl": "",
  "duration": 0,
  "items": Array [],
  "name": "",
  "playerType": "song",
  "playing": false,
  "position": 0,
  "seekTo": 0,
  "showPlayer": "CLOSED",
  "sliderValue": 0,
}
`;

exports[`audioPlayer reducer should seek to 1`] = `
Object {
  "currentIndex": 0,
  "currentSongName": "",
  "currentSongUrl": "",
  "duration": 0,
  "items": Array [],
  "name": "",
  "playerType": "song",
  "playing": false,
  "position": 0,
  "seekTo": 0,
  "showPlayer": "CLOSED",
  "sliderValue": 0,
}
`;

exports[`audioPlayer reducer should set playing to true 1`] = `
Object {
  "currentIndex": 0,
  "currentSongName": "",
  "currentSongUrl": "",
  "duration": 0,
  "items": Array [],
  "name": "",
  "playerType": "song",
  "playing": true,
  "position": 0,
  "seekTo": 0,
  "showPlayer": "CLOSED",
  "sliderValue": 0,
}
`;

exports[`audioPlayer reducer should set playlist 1`] = `
Object {
  "currentIndex": 0,
  "currentSongName": "",
  "currentSongUrl": "",
  "duration": 0,
  "items": Array [
    "1",
    "2",
  ],
  "name": "my playlist",
  "playerType": "playlist",
  "playing": true,
  "position": 0,
  "seekTo": 0,
  "showPlayer": "OPEN",
  "sliderValue": 0,
}
`;

exports[`audioPlayer reducer should set show player to open 1`] = `
Object {
  "currentIndex": 0,
  "currentSongName": "",
  "currentSongUrl": "",
  "duration": 0,
  "items": Array [],
  "name": "",
  "playerType": "song",
  "playing": false,
  "position": 0,
  "seekTo": 0,
  "showPlayer": "OPEN",
  "sliderValue": 0,
}
`;

exports[`audioPlayer reducer should set song 1`] = `
Object {
  "currentIndex": 0,
  "currentSongName": "songname",
  "currentSongUrl": "songurl",
  "duration": 0,
  "items": Array [],
  "name": "",
  "playerType": "song",
  "playing": true,
  "position": 0,
  "seekTo": 0,
  "showPlayer": "OPEN",
  "sliderValue": 0,
}
`;

exports[`audioPlayer reducer should toggle playing to true 1`] = `
Object {
  "currentIndex": 0,
  "currentSongName": "",
  "currentSongUrl": "",
  "duration": 0,
  "items": Array [],
  "name": "",
  "playerType": "song",
  "playing": true,
  "position": 0,
  "seekTo": 0,
  "showPlayer": "CLOSED",
  "sliderValue": 0,
}
`;

exports[`audioPlayer reducer should update playback instance 1`] = `
Object {
  "currentIndex": 0,
  "currentSongName": "",
  "currentSongUrl": "",
  "duration": 25,
  "items": Array [],
  "name": "",
  "playerType": "song",
  "playing": false,
  "position": 25,
  "seekTo": 0,
  "showPlayer": "CLOSED",
  "sliderValue": 25,
}
`;

exports[`audioPlayer reducer should update song playing in playlist 1`] = `
Object {
  "currentIndex": 1,
  "currentSongName": "",
  "currentSongUrl": "",
  "duration": 0,
  "items": Array [],
  "name": "",
  "playerType": "song",
  "playing": false,
  "position": 0,
  "seekTo": 0,
  "showPlayer": "CLOSED",
  "sliderValue": 0,
}
`;
